--- a/views/results.html.twig
+++ b/views/results.html.twig
@@ -13,7 +13,7 @@
             <div class="container main">
                 <div class="row">
                     <div class="col-md-6">
-                        <h2>Here's your score: Number of {{ word }}s in {{ sentence }}: {{ count }}</h2>
+                        <h2>Here's your score: Number of occurrences of "{{ word }}" in "{{ sentence }}": {{ count }}</h2>
                     </div>
                     <div class="col-md-6">
                     </div>
