update instructions on input form to indicate case-sensitive

--- a/views/input_form.html.twig
+++ b/views/input_form.html.twig
@@ -19,7 +19,7 @@
                                 <input type="text" name="word" placeholder="ex: sea" required></input>
                             </div>
                             <div class="form-group">
-                                <label for="sentence">Enter a sentence that contains that word (or not): </label>
+                                <label for="sentence">Enter a sentence that contains that word (or not) (case-sensitive): </label>
                                 <input type="text" name="sentence" placeholder="ex: she sell sea shells by the sea shore" required></input>
                             </div>
                             <button type="submit" name="submit-button" class="btn btn-primary">Show count!</button>
