--- a/views/results.html.twig
+++ b/views/results.html.twig
@@ -3,12 +3,12 @@
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/styles.css" type="text/css">
-        <title>Repeat Counter</title>
+        <title>Rrrrepeat Counter</title>
     </head>
     <body>
         <div class="container-fluid">
             <div class="jumbotron">
-                <h1>Repeat Counter</h1>
+                <h1>Rrrrepeat Counter</h1>
                 <h2>A simple app that counts the number of occurrences of a word in a sentence.</h2>
             </div>
             <div class="container main">
