--- a/views/input_form.html.twig
+++ b/views/input_form.html.twig
@@ -21,7 +21,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="sentence">Enter a sentence that contains that word (or not) (case-sensitive): </label>
-                                <input type="text" name="sentence" id="sentence" placeholder="ex: she sell sea shells by the sea shore" required></input>
+                                <input type="text" name="sentence" id="sentence" placeholder="ex: she sells sea shells by the sea shore" required></input>
                             </div>
                             <button type="submit" name="submit-button" class="btn btn-primary">Show count!</button>
                         </form>
