add background image and additional styling to forms

--- a/views/input_form.html.twig
+++ b/views/input_form.html.twig
@@ -8,6 +8,7 @@
     <body>
         <div class="container-fluid">
             <div class="jumbotron">
+                <img src="/img/letters_3d.jpg" alt="3-D letters">
                 <h1>Rrrrepeat Counter</h1>
                 <h2>A simple app that counts the number of occurrences of a word in a sentence.</h2>
             </div>
