--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,3 +1,31 @@
+.jumbotron {
+    position: relative;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.jumbotron img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: auto;
+  opacity: 0.20;
+}
+
+.jumbotron h1 {
+  padding: 0px;
+  position: relative;
+  z-index: 2;
+  color: rgba(51, 51, 51, 1);
+}
+
+.jumbotron h2 {
+  padding: 0px;
+  position: relative;
+  z-index: 2;
+  color: rgba(102, 102, 102, 1);
+}
 
 input#sentence {
     width: 600px;
