--- a/views/results.html.twig
+++ b/views/results.html.twig
@@ -8,13 +8,14 @@
     <body>
         <div class="container-fluid">
             <div class="jumbotron">
+                <img src="/img/letters_3d.jpg" alt="3-D letters">
                 <h1>Rrrrepeat Counter</h1>
                 <h2>A simple app that counts the number of occurrences of a word in a sentence.</h2>
             </div>
             <div class="container main">
                 <div class="row">
                     <div class="col-md-6">
-                        <h3>Number of occurrences of "{{ display_word }}" in "{{ display_sentence }}": {{ display_count }}</h3>
+                        <h3 class="results">Number of occurrences of "{{ display_word }}" in "{{ display_sentence }}": {{ display_count }}</h3>
                     </div>
                     <div class="col-md-6">
                     </div>
