--- a/views/results.html.twig
+++ b/views/results.html.twig
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Zilla+Slab:300,400,700" rel="stylesheet">
         <link rel="stylesheet" href="/css/styles.css" type="text/css">
         <title>Rrrrepeat Counter</title>
     </head>
